   when receiving DTMF.  Use the 'j' option to enable extension jumping. Also
   changed arguments to SayUnixTime so that every option is truly optional even
   when using multiple options (so that j option could be used without having to
   manually specify timezone and format) There are other beneftis eg. format can
   now be used without specifying time zone as well.

Parking
------------
 * New per parking lot options: comebackcontext and comebackdialtime. See
   configs/features.conf.sample for more details.

 * Channel variable PARKER is now set when comebacktoorigin is disabled in
   a parking lot.

 * MixMonitor hooks now have IDs associated with them which can be used to assign
   a target to StopMixMonitor. Use of MixMonitor's i(variable) option will allow
   storage of the MixMontior ID in a channel variable.  StopMixmonitor now accepts
   that ID as an argument.

CDR postgresql driver changes
-----------------------------
 * Added command "cdr show pgsql status" to check connection status

AMI (Asterisk Manager Interface) changes
----------------------------------------
 * Originate now generates an error response if the extension given
   is not found in the dialplan

 * MixMonitor will now show IDs associated with the mixmonitor upon creating them
   if the i(variable) option is used. StopMixMonitor will accept MixMonitorID as
   on option to close specific MixMonitors.

 * The SIPshowpeer manager action response field "SIP-Forcerport" has been updated
   to include information about peers configured with nat=auto_force_rport by
   returning "A" if auto_force_rport is set and nat is detected, and "a" if it is
   set and nat is not detected. "Y" and "N" are still returned if auto_force_rport
   is not enabled.

FAX changes
-----------
 * FAXOPT(faxdetect) will enable a generic fax detect framehook for dialplan
   control of faxdetect.

DUNDi changes
-------------
 * Allow the built in variables ${NUMBER}, ${IPADDR} and ${SECRET} to be